Prevent touch actions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            touch-action: manipulation;
         }
 
         .table th,
