--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            touch-action: manipulation;
+            touch-action: none;
         }
 
         .table th,
