--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="HandheldFriendly" content="true">
     <title>Daily Inventory</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -25,7 +26,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            touch-action: none;
+            touch-action: manipulation;
         }
 
         .table th,
