--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- Add Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
+        html, body {touch-action: none;}
         body {
             font-family: Arial, sans-serif;
-            touch-action: manipulation;
         }
 
         .table th,
